--- a/src/personal_edit_page.html
+++ b/src/personal_edit_page.html
@@ -48,255 +48,263 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u176" class="ax_default box_1">
-        <div id="u176_div" class=""></div>
-        <div id="u176_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+      <!-- Information (Dynamic Panel) -->
+      <div id="u191" class="ax_default" data-label="Information">
+        <div id="u191_state0" class="panel_state" data-label="State 1" style="">
+          <div id="u191_state0_content" class="panel_state_content">
 
-      <!-- Unnamed (setting) -->
+            <!-- Unnamed (Rectangle) -->
+            <div id="u192" class="ax_default box_1">
+              <div id="u192_div" class=""></div>
+              <div id="u192_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u178" class="ax_default icon">
-        <img id="u178_img" class="img " src="images/home_page/u71.svg"/>
-        <div id="u178_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (menu) -->
 
-      <!-- Unnamed (Shape) -->
-      <div id="u179" class="ax_default icon">
-        <img id="u179_img" class="img " src="images/home_page/u72.svg"/>
-        <div id="u179_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u194" class="ax_default box_1">
+              <div id="u194_div" class=""></div>
+              <div id="u194_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u180" class="ax_default icon">
-        <img id="u180_img" class="img " src="images/home_page/u73.svg"/>
-        <div id="u180_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-      <div id="u177" style="display:none; visibility:hidden;"></div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u195" class="ax_default heading_1">
+              <div id="u195_div" class=""></div>
+              <div id="u195_text" class="text ">
+                <p><span>Menu</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (menu) -->
+            <!-- Unnamed (Image) -->
+            <div id="u196" class="ax_default image">
+              <img id="u196_img" class="img " src="images/register_page/u1.png"/>
+              <div id="u196_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u182" class="ax_default box_1">
-        <div id="u182_div" class=""></div>
-        <div id="u182_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Vertical Line) -->
+            <div id="u197" class="ax_default line">
+              <img id="u197_img" class="img " src="images/home_page/u32.svg"/>
+              <div id="u197_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u183" class="ax_default heading_1">
-        <div id="u183_div" class=""></div>
-        <div id="u183_text" class="text ">
-          <p><span>Menu</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u198" class="ax_default box_1">
+              <div id="u198_div" class=""></div>
+              <div id="u198_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u184" class="ax_default heading_2">
-        <div id="u184_div" class=""></div>
-        <div id="u184_text" class="text ">
-          <p><span>API</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u199" class="ax_default box_1">
+              <div id="u199_div" class=""></div>
+              <div id="u199_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Ellipse) -->
-      <div id="u185" class="ax_default shape">
-        <img id="u185_img" class="img " src="images/home_page/u22.svg"/>
-        <div id="u185_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u200" class="ax_default box_1">
+              <div id="u200_div" class=""></div>
+              <div id="u200_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u186" class="ax_default heading_2">
-        <div id="u186_div" class=""></div>
-        <div id="u186_text" class="text ">
-          <p><span>Trans record</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u201" class="ax_default box_1">
+              <div id="u201_div" class=""></div>
+              <div id="u201_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Ellipse) -->
-      <div id="u187" class="ax_default shape">
-        <img id="u187_img" class="img " src="images/home_page/u22.svg"/>
-        <div id="u187_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u202" class="ax_default heading_2">
+              <div id="u202_div" class=""></div>
+              <div id="u202_text" class="text ">
+                <p><span>API</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u188" class="ax_default heading_2">
-        <div id="u188_div" class=""></div>
-        <div id="u188_text" class="text ">
-          <p><span>Review policy</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u203" class="ax_default heading_2">
+              <div id="u203_div" class=""></div>
+              <div id="u203_text" class="text ">
+                <p><span>Trans record</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Ellipse) -->
-      <div id="u189" class="ax_default shape">
-        <img id="u189_img" class="img " src="images/home_page/u22.svg"/>
-        <div id="u189_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u204" class="ax_default heading_2">
+              <div id="u204_div" class=""></div>
+              <div id="u204_text" class="text ">
+                <p><span>Review policy</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u190" class="ax_default heading_2">
-        <div id="u190_div" class=""></div>
-        <div id="u190_text" class="text ">
-          <p><span>Information Edit</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u205" class="ax_default heading_2">
+              <div id="u205_div" class=""></div>
+              <div id="u205_text" class="text ">
+                <p><span>Information Edit</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Ellipse) -->
-      <div id="u191" class="ax_default shape">
-        <img id="u191_img" class="img " src="images/home_page/u22.svg"/>
-        <div id="u191_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u206" class="ax_default box_1">
+              <div id="u206_div" class=""></div>
+              <div id="u206_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u192" class="ax_default image">
-        <img id="u192_img" class="img " src="images/register_page/u0.png"/>
-        <div id="u192_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u207" class="ax_default heading_2">
+              <div id="u207_div" class=""></div>
+              <div id="u207_text" class="text ">
+                <p><span>Home</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Vertical Line) -->
-      <div id="u193" class="ax_default line">
-        <img id="u193_img" class="img " src="images/home_page/u30.svg"/>
-        <div id="u193_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u208" class="ax_default shape">
+              <div id="u208_div" class=""></div>
+              <div id="u208_text" class="text ">
+                <p><span>Log out</span></p>
+              </div>
+            </div>
+            <div id="u193" style="display:none; visibility:hidden;"></div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u194" class="ax_default button">
-        <div id="u194_div" class=""></div>
-        <input id="u194_input" type="text" value="Log out" class="u194_input"/>
-      </div>
-      <div id="u181" style="display:none; visibility:hidden;"></div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u209" class="ax_default label">
+              <div id="u209_div" class=""></div>
+              <div id="u209_text" class="text ">
+                <p><span>Company:</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u195" class="ax_default label">
-        <div id="u195_div" class=""></div>
-        <div id="u195_text" class="text ">
-          <p><span>Company:</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u210" class="ax_default label">
+              <div id="u210_div" class=""></div>
+              <div id="u210_text" class="text ">
+                <p><span>Email:</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u196" class="ax_default label">
-        <div id="u196_div" class=""></div>
-        <div id="u196_text" class="text ">
-          <p><span>Email:</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u211" class="ax_default label">
+              <div id="u211_div" class=""></div>
+              <div id="u211_text" class="text ">
+                <p><span>Telephone(Optional):</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u197" class="ax_default label">
-        <div id="u197_div" class=""></div>
-        <div id="u197_text" class="text ">
-          <p><span>Telephone(Optional):</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u212" class="ax_default label">
+              <div id="u212_div" class=""></div>
+              <div id="u212_text" class="text ">
+                <p><span>Address:</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u198" class="ax_default label">
-        <div id="u198_div" class=""></div>
-        <div id="u198_text" class="text ">
-          <p><span>Address:</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u213" class="ax_default text_field1">
+              <div id="u213_div" class=""></div>
+              <input id="u213_input" type="text" value="" class="u213_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u199" class="ax_default text_field1">
-        <div id="u199_div" class=""></div>
-        <input id="u199_input" type="text" value="" class="u199_input"/>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u214" class="ax_default text_field1">
+              <div id="u214_div" class=""></div>
+              <input id="u214_input" type="email" value="" class="u214_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u200" class="ax_default text_field1">
-        <div id="u200_div" class=""></div>
-        <input id="u200_input" type="email" value="" class="u200_input"/>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u215" class="ax_default text_field1">
+              <div id="u215_div" class=""></div>
+              <input id="u215_input" type="tel" value="" class="u215_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u201" class="ax_default text_field1">
-        <div id="u201_div" class=""></div>
-        <input id="u201_input" type="tel" value="" class="u201_input"/>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u216" class="ax_default text_field1">
+              <div id="u216_div" class=""></div>
+              <input id="u216_input" type="text" value="" class="u216_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u202" class="ax_default text_field1">
-        <div id="u202_div" class=""></div>
-        <input id="u202_input" type="text" value="" class="u202_input"/>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u217" class="ax_default label">
+              <div id="u217_div" class=""></div>
+              <div id="u217_text" class="text ">
+                <p><span>Password:</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u203" class="ax_default label">
-        <div id="u203_div" class=""></div>
-        <div id="u203_text" class="text ">
-          <p><span>Password:</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u218" class="ax_default text_field1">
+              <div id="u218_div" class=""></div>
+              <input id="u218_input" type="text" value="" class="u218_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u204" class="ax_default text_field1">
-        <div id="u204_div" class=""></div>
-        <input id="u204_input" type="text" value="" class="u204_input"/>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u219" class="ax_default label">
+              <div id="u219_div" class=""></div>
+              <div id="u219_text" class="text ">
+                <p><span>Contact person's name:</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Line) -->
-      <div id="u205" class="ax_default line">
-        <img id="u205_img" class="img " src="images/personal_edit_page/u205.svg"/>
-        <div id="u205_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u220" class="ax_default text_field1">
+              <div id="u220_div" class=""></div>
+              <input id="u220_input" type="text" value="" class="u220_input"/>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u206" class="ax_default label">
-        <div id="u206_div" class=""></div>
-        <div id="u206_text" class="text ">
-          <p><span>Contact person's name:</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u221" class="ax_default button">
+              <div id="u221_div" class=""></div>
+              <input id="u221_input" type="text" value="Cancel" class="u221_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u207" class="ax_default text_field1">
-        <div id="u207_div" class=""></div>
-        <input id="u207_input" type="text" value="" class="u207_input"/>
-      </div>
+            <!-- Unnamed (Text Field) -->
+            <div id="u222" class="ax_default button">
+              <div id="u222_div" class=""></div>
+              <input id="u222_input" type="text" value="Save info" class="u222_input"/>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u208" class="ax_default button">
-        <div id="u208_div" class=""></div>
-        <input id="u208_input" type="text" value="Cancel" class="u208_input"/>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u223" class="ax_default heading_1">
+              <div id="u223_div" class=""></div>
+              <div id="u223_text" class="text ">
+                <p><span style="text-decoration:underline ;">Information Edit</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u209" class="ax_default button">
-        <div id="u209_div" class=""></div>
-        <input id="u209_input" type="text" value="Save info" class="u209_input"/>
-      </div>
+            <!-- Unnamed (Line) -->
+            <div id="u224" class="ax_default line">
+              <img id="u224_img" class="img " src="images/api_page/u190.svg"/>
+              <div id="u224_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u210" class="ax_default heading_1">
-        <div id="u210_div" class=""></div>
-        <div id="u210_text" class="text ">
-          <p><span style="text-decoration:underline ;">Information Edit</span></p>
+            <!-- Unnamed (Droplist) -->
+            <div id="u225" class="ax_default droplist">
+              <div id="u225_div" class=""></div>
+              <select id="u225_input" class="u225_input">
+                <option class="u225_input_option" value="+852">+852</option>
+                <option class="u225_input_option" value="+86">+86</option>
+              </select>
+            </div>
+          </div>
         </div>
       </div>
     </div>
